# cardlink

./: .gitignore  .python-version  MOBILE_SIMULATOR_COMPLETION.md  OBSERVABILITY_PROGRESS.md  USER_GUIDE.md  alembic.ini  claude.md  config.yaml  keys.yaml  pyproject.toml  reformat_tasks.py  scp81-prd.md  simulator.yaml
.spec-workflow/: IMPLEMENTATION_STATUS.md
.spec-workflow/approvals/database-layer/: approval_1764071288263_9wel0xdo5.json  approval_1764071606134_s44qwi91c.json  approval_1764071726946_hauquzxxg.json
.spec-workflow/approvals/modem-controller/: approval_1764070086959_h20xoxgwy.json
.spec-workflow/approvals/network-sim-integration/: approval_1764072348412_qay9377wd.json  approval_1764073648900_f67xdtczn.json  approval_1764073835772_5xwid1stj.json
.spec-workflow/approvals/observability/: approval_1764071861374_2vpt8yyd4.json  approval_1764072130405_64o424fyu.json  approval_1764072251002_gc9y7p4wv.json
.spec-workflow/approvals/phone-controller/: approval_1764068546145_spfyvzpzd.json
.spec-workflow/approvals/psk-tls-server/: approval_1764065523154_fr6dw2m6a.json
.spec-workflow/approvals/steering/: approval_1764062210611_s3995znae.json  approval_1764062811209_a4u1it3dp.json  approval_1764063507976_zoc1ss7gp.json
.spec-workflow/approvals/uicc-provisioner/: approval_1764070359469_uhd1bk9yg.json  approval_1764070796706_lrfclzu6z.json  approval_1764071164980_3i1zd3jg4.json
.spec-workflow/approvals/web-dashboard/: approval_1764067502692_hk5fvocsf.json
.spec-workflow/specs/database-layer/: design.md  requirements.md  tasks.md
.spec-workflow/specs/mobile-simulator/: design.md  requirements.md  tasks.md
.spec-workflow/specs/modem-controller/: design.md  requirements.md  tasks.md
.spec-workflow/specs/network-sim-integration/: design.md  requirements.md  tasks.md
.spec-workflow/specs/observability/: design.md  requirements.md  tasks.md
.spec-workflow/specs/phone-controller/: design.md  requirements.md  tasks.md
.spec-workflow/specs/psk-tls-server/: design.md  requirements.md  tasks.md
.spec-workflow/specs/uicc-provisioner/: design.md  requirements.md  tasks.md
.spec-workflow/specs/web-dashboard/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
docs/: dashboard-guide.md  database-guide.md  database-quick-reference.md  netsim-api.md  netsim-usage.md  observability-guide.md  pcsc-setup.md  provisioner-guide.md  provisioner-quick-reference.md  psk-tls-server-guide.md  server-config-guide.md  simulator-guide.md  simulator-quick-reference.md  user-guide.md
docs/guides/: cli-usage-guide.md  modem-controller-guide.md  phone-controller-guide.md  uicc-provisioner-guide.md
examples/netsim/: README.md  handover_test.yaml  network_recovery.yaml  ota_session.yaml  sms_trigger.yaml  ue_registration.yaml
examples/scripts/: default.yaml
examples/simulator/: README.md  advanced_config.yaml  basic_config.yaml  error_injection_config.yaml  timeout_config.yaml
src/cardlink/cli/: __init__.py  dashboard.py  db.py  modem.py  phone.py  server.py  simulator.py
src/cardlink/dashboard/: __init__.py  scripts_api.py  server.py
src/cardlink/database/: __init__.py  config.py  events.py  exceptions.py  export_import.py  manager.py  migrate.py  unit_of_work.py
src/cardlink/modem/: __init__.py  at_interface.py  bip_monitor.py  controller.py  modem_info.py  modem_manager.py  network_manager.py  qxdm_interface.py  serial_client.py  sms_trigger.py  urc_parser.py
src/cardlink/netsim/: __init__.py  cli.py  connection.py  constants.py  events.py  exceptions.py  interface.py  manager.py  performance.py  scenario.py  triggers.py  types.py
src/cardlink/observability/: README.md  __init__.py  config.py  manager.py
src/cardlink/phone/: __init__.py  adb_client.py  adb_controller.py  at_interface.py  bip_monitor.py  controller.py  device_info.py  device_manager.py  exceptions.py  logcat_parser.py  models.py  network_manager.py  profile_manager.py  sms_trigger.py
src/cardlink/provisioner/: __init__.py  apdu_interface.py  atr_parser.py  bip_config.py  key_manager.py  models.py  pcsc_client.py  profile_manager.py  psk_config.py  scp02.py  scp03.py  secure_domain.py  tlv_parser.py  trigger_config.py  url_config.py
src/cardlink/scripts/: __init__.py  db_manager.py  loader.py  manager.py  models.py  renderer.py  validator.py
src/cardlink/server/: README.md  __init__.py  admin_server.py  config.py  error_handler.py  event_emitter.py  gp_command_processor.py  http_handler.py  key_store.py  models.py  session_manager.py  tls_handler.py
src/cardlink/simulator/: README.md  __init__.py  client.py  config.py  http_client.py  models.py  psk_tls_client.py  virtual_uicc.py
src/gp_ota_tester/: __init__.py
src/gp_ota_tester/cli/: __init__.py  dashboard.py  db.py  modem.py  phone.py  server.py  simulator.py
src/gp_ota_tester/dashboard/: __init__.py  server.py
src/gp_ota_tester/database/: __init__.py  config.py  events.py  exceptions.py  export_import.py  manager.py  migrate.py  unit_of_work.py
src/gp_ota_tester/modem/: __init__.py  at_interface.py  bip_monitor.py  controller.py  exceptions.py  models.py  modem_info.py  modem_manager.py  network_manager.py  qxdm_interface.py  serial_client.py  sms_trigger.py  urc_parser.py
src/gp_ota_tester/phone/: __init__.py  adb_client.py  at_interface.py  bip_monitor.py  controller.py  device_info.py  device_manager.py  logcat_parser.py  network_manager.py  profile_manager.py  sms_trigger.py
src/gp_ota_tester/provisioner/: __init__.py  models.py  (+8 more)
tests/: __init__.py  conftest.py
tests/database/: __init__.py  test_models.py  test_repositories.py
tests/netsim/: mock_simulator.py  test_connection.py  test_managers.py  test_scenario.py
tests/observability/: conftest.py  test_collector.py  test_config.py  test_health.py  test_logging.py  test_manager.py  test_metrics.py  test_registry.py  test_tracing.py
tests/server/: __init__.py  test_integration.py
tests/simulator/: conftest.py  test_behavior.py  test_config.py  test_http_client.py  test_integration.py  test_virtual_uicc.py
(+217 files in other folders)
